# eng-dashboard

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REVIEW_PROMPT.md  check.sh  docker-compose.yml  notes.md  pyproject.toml  review_report.md  start.sh  task_plan.md
.github/workflows/: ci.yml
backend/: __init__.py  base.py  database.py  database_domain.py  main.py  models_domain.py  requirements.txt
backend/code_platform/: __init__.py  base.py  github_plugin.py  gitlab_plugin.py
backend/commands/: backfill_mr_history.py  jira_report_command.py  migrate_to_domain_db.py
backend/config/: gitlab_teams.py
backend/core/: __init__.py  config_loader.py  config_writer.py  paths.py
backend/issue_tracker/: __init__.py  base.py  factory.py  github_plugin.py  jira_plugin.py
backend/plugins/: __init__.py  registry.py
backend/routers/: alerts_router.py  code_router.py  config_router.py  domains_router.py  gitlab_collector_router.py  issues_router.py  jira_indexer_router.py  jira_report_router.py  onboard_router.py  port_router.py  providers_router.py  reports_router.py  search_router.py  sync_router.py
backend/services/: datetime_utils.py  domain_credentials.py  domain_registry.py  domain_seeder.py  email_service.py  engineer_sync_service.py  executive_reporting_service.py  gitlab_oauth_service.py  (+17 more)
config/: organization.demo.yaml  organization.example.yaml
data/: active_domain.txt
docs/: corrections.md
frontend/: .gitignore  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
scripts/: generate_demo.py
(+76 files in other folders)
