[project]
name = "eng-dashboard"
version = "1.0.0"
description = "Engineering Director Dashboard"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.9",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.84.0",
    "openai>=2.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
